== Mon 29 Mar 2010 07:04:34 UTC Mikel Lindsaar <raasdnil@gmail.com>

* Version bump to 2.1.5.3
* No longer depend on vendor'd treetop as treetop now has optional loading of parts of the library
* Change treetop dependency to 1.4.5

== Sun 28 Mar 2010 10:31:33 UTC Mikel Lindsaar <raasdnil@gmail.com>

* Version bump to 2.1.5.2
* Fixed up preserve case in header fields when assigned from a message closes issue #46

== Sun 28 Mar 2010 09:02:20 UTC Mikel Lindsaar <raasdnil@gmail.com>

* Version bump to 2.1.5.1
* Fixed net/pop3.rb regression for Ruby 1.8.6
* Merged in Jeremy Kemper's updates:
  * Bump vendored treetop to 1.4.4
  * Use Mikel's treetop for cucumber workaround
  * Use LOAD_PATH for spec_helper instead of relative requires
  * Force treetop from git so cucumber doesn't pull in old version

== Sun Mar 28 07:01:07 UTC 2010 Mikel Lindsaar <raasdnil@gmail.com>

* Version bump to 2.1.5
* Changed guess encoding to short circuit to binary if the mime type is unknown, should be safe
* Renaming spec to match the file for attachment_lists.rb
* Adding Message#decoded returns Message#body#decoded if the message is not multipart

== Sun Mar 28 02:55:42 UTC 2010 Mikel Lindsaar <raasdnil@gmail.com>

* Version bump to 2.1.4

== Sun Mar 28 00:26:27 UTC 2010 Mikel Lindsaar <raasdnil@gmail.com>

* Merged in Jeremy/treetop to vendored treetop
* Merged in nathansobo/treetop to vendored treetop
* Merged in pzbowen/mail into mail - Adds body auto encoding - awesome work
* Fixed content-transfer-encoding parser to be more compliant per RFC, also now handles trailing semi-colons correctly
* Fixed content-transfer-encoding parser to handle weird "from the wild" misspellings
* Added message.errors, header.errors arrays, returns array of [field_name, value, error_object] for each field that failed to parse
* Removed bundler require from Rakefile

== Sun Mar 17 03:03:03 UTC 2010 Mikel Lindsaar <raasdnil@gmail.com>

* Keep header name case when failing to unstructured field
